--- a/slides.tex
+++ b/slides.tex
@@ -130,6 +130,7 @@
 %%% Last slide ----------------------------------------------------
 \begin{frame}
     \frametitle{}
+
     \vspace{1em}
     \begin{centering}
     \Large \textcolor{title}{Web Scraping with R} \\[1em]
@@ -138,8 +139,8 @@
     \end{centering}
     \normalsize
     \textcolor{hilight}{\faLaptop}~~~\href{http://edild.github.io/}{http://edild.github.io/ }\\[.5em]
+    \textcolor{hilight}{\faGift}~~~\href{https://github.com/edild/talk_webscrapingr}{https://github.com/edild/talk\_webscrapingr}\\[0.5em]
     \textcolor{hilight}{\faTwitter}~~~\href{http://twitter.com/EduardSzoecs}{@EduardSzoecs}     \\[0.5em]
-    \textcolor{hilight}{\faGift}~~~\href{https://github.com/edild/talk_webscraping}{https://github.com/edild/talk\_work}\\[0.5em]
     \textcolor{hilight}{\faEnvelope}~~~\href{mailto:szoecs@uni-landau.de}{szoecs@uni-landau.de} \\[.5em]
     \hfill \includegraphics[width =.3\textwidth]{fig/Cc-by-nc_euro_icon.png} 
 \end{frame}
